added some cool animations and fixed some bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -345,6 +345,7 @@ li {
   grid-template-rows: 100%;
   grid-template-areas: "image container"; }
   .login .loginImage {
+    z-index: 2;
     position: relative;
     grid-area: image;
     background-image: url(img/lamecoLoginImg.jpg);
@@ -369,11 +370,39 @@ li {
     justify-content: center;
     align-items: center;
     position: relative; }
-    .login .loginContainer div.forgotpassworderror {
+    .login .loginContainer .loginError {
       position: absolute;
       top: 25vh;
       left: 17.5%;
       color: #cf1f3e; }
+    .login .loginContainer .loginForm.slide-enter,
+    .login .loginContainer .forgotForm.reverse.slide-enter,
+    .login .loginContainer .passwordReset.slide-enter {
+      transform: translateX(-140%); }
+    .login .loginContainer .forgotForm.slide-enter,
+    .login .loginContainer .forgotSuccess.slide-enter,
+    .login .loginContainer .passwordResetSuccess.slide-enter,
+    .login .loginContainer .passwordReset.reverse.slide-enter {
+      transform: translateX(140%); }
+    .login .loginContainer .slide-enter {
+      position: absolute; }
+    .login .loginContainer .slide-enter.slide-enter-active {
+      transform: translateX(0);
+      transition: transform 400ms cubic-bezier(0.645, 0.045, 0.355, 1); }
+    .login .loginContainer .slide-exit {
+      transform: translateX(0);
+      position: absolute; }
+    .login .loginContainer .loginForm.slide-exit.slide-exit-active,
+    .login .loginContainer .forgotForm.reverse.slide-exit.slide-exit-active,
+    .login .loginContainer .passwordReset.slide-exit.slide-exit-active {
+      transform: translateX(-140%); }
+    .login .loginContainer .forgotForm.slide-exit.slide-exit-active,
+    .login .loginContainer .forgotSuccess.slide-exit.slide-exit-active,
+    .login .loginContainer .passwordResetSuccess.slide-exit.slide-exit-active,
+    .login .loginContainer .passwordReset.reverse.slide-exit.slide-exit-active {
+      transform: translateX(140%); }
+    .login .loginContainer .slide-exit.slide-exit-active {
+      transition: transform 400ms cubic-bezier(0.645, 0.045, 0.355, 1); }
     .login .loginContainer form.loginForm {
       width: 65%;
       height: 40vh;
