Styled profile page added link to it. (click on profile)

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -18,3 +18,5 @@
 @import "scss/components/widgets";
 @import "scss/components/login";
 @import "scss/components/customCheckmark";
+@import "scss/components/adminProfile";
+@import "scss/components/inputs";
