--- a/client/src/App.css
+++ b/client/src/App.css
@@ -140,6 +140,9 @@ li {
     background-color: #565656;
     transition: 0.2s; }
 
+.backButton {
+  margin: 50px 0 0 50px; }
+
 .titleBar {
   position: fixed;
   top: 0;
@@ -383,18 +386,6 @@ li {
         justify-content: space-between; }
         .login .loginContainer form .middleForm .formField {
           height: 7.5vh; }
-          .login .loginContainer form .middleForm .formField input {
-            width: 100%;
-            background: transparent;
-            border: 0;
-            outline: 0;
-            border-bottom: 2px solid rgba(207, 31, 62, 0.6); }
-          .login .loginContainer form .middleForm .formField ::placeholder {
-            color: #b9b9b9; }
-          .login .loginContainer form .middleForm .formField .invalid {
-            margin-top: 2px;
-            font-size: 0.8em;
-            color: #cf1f3e; }
       .login .loginContainer form .bottomForm {
         height: 10vh;
         display: flex;
@@ -453,3 +444,70 @@ li {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg); }
+
+.mainContainer {
+  width: 100%;
+  height: 100vh;
+  padding-top: 56px; }
+  .mainContainer .profileForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 250px 0 250px; }
+    .mainContainer .profileForm .adminInfo {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-self: flex-start; }
+      .mainContainer .profileForm .adminInfo .profileImg {
+        background-image: url(img/lamecoLoginImg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 166px;
+        height: 166px;
+        border-radius: 50%; }
+      .mainContainer .profileForm .adminInfo .info {
+        padding-left: 30px;
+        align-self: center;
+        color: #707070; }
+        .mainContainer .profileForm .adminInfo .info h6 {
+          font-weight: 100;
+          padding-bottom: 20px;
+          color: rgba(112, 112, 112, 0.5); }
+    .mainContainer .profileForm .adminForm {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 100%;
+      padding-top: 9vh; }
+      .mainContainer .profileForm .adminForm .inputFields {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%; }
+        .mainContainer .profileForm .adminForm .inputFields input {
+          margin-bottom: 4.5vh; }
+        .mainContainer .profileForm .adminForm .inputFields h6 {
+          padding-bottom: 3vh;
+          color: #707070; }
+        .mainContainer .profileForm .adminForm .inputFields .adminFormInfo {
+          width: 34.5vw; }
+        .mainContainer .profileForm .adminForm .inputFields .adminFormPassword {
+          width: 34.5vw;
+          align-self: flex-end; }
+
+input[type=text], input[type=password] {
+  width: 100%;
+  background: transparent;
+  border: 0;
+  outline: 0;
+  border-bottom: 2px solid rgba(207, 31, 62, 0.6); }
+
+::placeholder {
+  color: #b9b9b9; }
+
+.invalid {
+  margin-top: 2px;
+  font-size: 0.8em;
+  color: #cf1f3e; }
