--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -57,6 +57,11 @@
   padding: 4px 10px 4px 8px;
 }
 
+.btn.red {
+  color: $color-white;
+  background-color: $color-red;
+}
+
 .addButton {
   border-radius: 0px;
   background-color: $color-grey;
@@ -77,6 +82,6 @@
   }
 }
 
-.backButton{
+.backButton {
   margin: 50px 0 0 50px;
 }
