--- a/client/src/scss/components/_buttons.scss
+++ b/client/src/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
   background-color: transparent;
   border: 2px solid $color-red;
   border-radius: 30px;
-  color: $color-grey;
+  color: $color-red;
   padding: 8px 17px 8px 12px;
   text-align: center;
   text-decoration: none;
