Buttons styling fixed; Buttons are now straight 🔥

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,6 +55,10 @@ li {
   -webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
   box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2); }
 
+.flex-center {
+  display: flex;
+  justify-content: center !important; }
+
 .rw-main.type-today {
   border-radius: 0px; }
 
@@ -84,8 +88,9 @@ li {
   background-color: transparent;
   border: 2px solid #cf1f3e;
   border-radius: 30px;
+  background-clip: padding-box;
   color: #707070;
-  padding: 8px 17px 8px 12px;
+  padding: 8px 17px 8px 17px;
   text-align: center;
   text-decoration: none;
   font-size: 12px;
@@ -94,10 +99,13 @@ li {
   display: inline-flex;
   justify-content: center;
   overflow: hidden;
-  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1); }
-  .btn i {
-    font-size: 17px;
-    margin-right: 5px; }
+  transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+  min-width: 120px; }
+  .btn.icon {
+    padding: 8px 17px 8px 12px; }
+    .btn.icon i {
+      font-size: 17px;
+      margin-right: 5px; }
   .btn::before {
     content: "";
     transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
@@ -111,12 +119,13 @@ li {
     -ms-transform: translate(-110%, 0) skew(45deg);
     -webkit-transform: translate(-110%, 0) skew(45deg);
     transform: translate(-110%, 0) skew(45deg);
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    background-clip: padding-box; }
   .btn:hover, .btn:active {
     color: white; }
     .btn:hover::before, .btn:active::before {
       background-color: #cf1f3e;
-      left: 120%; }
+      left: 130%; }
   .btn:focus {
     outline: none;
     box-shadow: none; }
@@ -404,9 +413,6 @@ li {
             color: #cf1f3e;
             text-decoration: none;
             line-height: 25px; }
-        .login .loginContainer form .bottomForm button {
-          width: 30%;
-          margin: 0 35%; }
 
 .rememberContainer {
   display: block;
