--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,7 @@
 @import "scss/base/reset";
 @import "scss/base/typography";
 @import "scss/base/shadows";
+@import "scss/base/globals";
 @import "scss/layout/grid";
 @import "scss/layout/header";
 @import "scss/layout/footer";
