--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,10 +4,6 @@
 @import "scss/base/reset";
 @import "scss/base/typography";
 @import "scss/base/shadows";
-@import "scss/layout/grid";
-@import "scss/layout/header";
-@import "scss/layout/footer";
-@import "scss/layout/nav";
 @import "scss/components/buttons";
 @import "scss/components/titleBar";
 @import "scss/components/sideNav";
@@ -19,4 +15,5 @@
 @import "scss/components/login";
 @import "scss/components/customCheckmark";
 @import "scss/components/adminProfile";
+@import "scss/components/dashboardEdit";
 @import "scss/components/inputs";
