--- a/client/src/scss/components/_login.scss
+++ b/client/src/scss/components/_login.scss
@@ -48,6 +48,10 @@
         justify-content: space-between;
         .formField {
           height: 7.5vh;
+
+          input{
+            width: 100%;
+          }
         }
       }
       .bottomForm {
