Added add company button popup, requires styling and functioning

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -22,3 +22,4 @@
 @import "scss/components/adminProfile";
 @import "scss/components/dashboardEdit";
 @import "scss/components/inputs";
+@import "scss/components/card";
