--- a/client/src/App.css
+++ b/client/src/App.css
@@ -747,3 +747,33 @@ input[type=text], input[type=password] {
   margin-top: 2px;
   font-size: 0.8em;
   color: #cf1f3e; }
+
+.card {
+  width: 100vw;
+  height: 100%;
+  background-color: #3d3d3d;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0.7;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .card .cardContent {
+    width: 30vw;
+    height: 40vh;
+    background-color: white;
+    display: flex;
+    flex-direction: column; }
+    .card .cardContent .cardHeader {
+      height: 50vh;
+      width: 100vw;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .card .cardContent .cardContent {
+      height: 50vh;
+      width: 100vw; }
+      .card .cardContent .cardContent button {
+        width: 200px;
+        height: 100px; }
