--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,10 +5,6 @@
 @import "scss/base/typography";
 @import "scss/base/shadows";
 @import "scss/base/globals";
-@import "scss/layout/grid";
-@import "scss/layout/header";
-@import "scss/layout/footer";
-@import "scss/layout/nav";
 @import "scss/components/buttons";
 @import "scss/components/titleBar";
 @import "scss/components/sideNav";
@@ -22,3 +18,4 @@
 @import "scss/components/adminProfile";
 @import "scss/components/dashboardEdit";
 @import "scss/components/inputs";
+@import "scss/components/list";
