--- a/client/src/scss/components/bars/_titleBar.scss
+++ b/client/src/scss/components/bars/_titleBar.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   z-index: 1;
+  @include user-select(none);
 
   h1 {
     color: $color-grey;
