--- a/client/src/scss/components/bars/_titleBar.scss
+++ b/client/src/scss/components/bars/_titleBar.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   z-index: 1;
   @include user-select(none);
+  @include shadow($shadow-1);
 
   h1 {
     color: $color-grey;
