-Fixed styling profilepage -Made backButton working

--- a/client/src/scss/components/_adminProfile.scss
+++ b/client/src/scss/components/_adminProfile.scss
@@ -29,6 +29,7 @@
           font-weight: 100;
           padding-bottom: 20px;
           color: $color-grey-transparent-50;
+          font-size: inherit;
         }
       }
     }
@@ -37,7 +38,7 @@
       flex-direction: column;
       align-items: flex-start;
       width: 100%;
-      padding-top: 9vh;
+      padding-top: 6vh;
       .inputFields {
         display: flex;
         flex-direction: row;
@@ -45,17 +46,19 @@
         width: 100%;
         input {
           margin-bottom: 4.5vh;
+          font-size: inherit;
         }
         h6 {
           padding-bottom: 3vh;
           color: $color-grey;
+          font-size: inherit
         }
         .adminFormInfo {
           width: 34.5vw;
+          align-self: flex-end;
         }
         .adminFormPassword {
           width: 34.5vw;
-          align-self: flex-end;
         }
       }
     }
