--- a/client/src/scss/base/_inputs.scss
+++ b/client/src/scss/base/_inputs.scss
@@ -1,13 +1,17 @@
-input[type=text], input[type=password]{
+input[type=text],
+input[type=password] {
   width: 90%;
   background: transparent;
   border: 0;
   outline: 0;
   border-bottom: 2px solid $color-red-transparent;
+  font-size: inherit;
 }
+
 ::placeholder {
   color: rgb(185, 185, 185);
 }
+
 .invalid {
   margin-top: 2px;
   font-size: 0.8em;
