--- a/client/src/scss/components/_card.scss
+++ b/client/src/scss/components/_card.scss
@@ -12,7 +12,7 @@
 
   .cardContent {
     width: 35vw;
-    height: 70vh;
+    height: auto;
     background-color: $color-white;
     .cardHeader {
       height: 50%;
