--- a/client/src/App.css
+++ b/client/src/App.css
@@ -287,7 +287,9 @@ input[type=text], input[type=password] {
     align-items: center;
     color: white;
     padding: 0;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
     .titleBar .subnav li i {
       padding-right: 0;
       font-size: 20px; }
