--- a/client/src/scss/components/bars/_titleBarDropdown.scss
+++ b/client/src/scss/components/bars/_titleBarDropdown.scss
@@ -15,6 +15,7 @@
     color: $color-white;
     padding: 0;
     margin-bottom: 10px;
+    @include shadow($shadow-1);
 
     i {
       padding-right: 0;
