--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -11,6 +11,7 @@
 @import "scss/base/customCheckmark";
 @import "scss/base/inputs";
 @import "scss/base/list";
+@import "scss/base/animations";
 
 // Components
 
