Scss files broken after front-end was merged into master, fixed now

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,23 +1,33 @@
+// Abstracts
 @import "scss/abstracts/variables";
 @import "scss/abstracts/mixins";
 @import "scss/abstracts/functions";
+
+// Base
 @import "scss/base/reset";
 @import "scss/base/typography";
-@import "scss/base/shadows";
 @import "scss/base/globals";
-@import "scss/components/buttons";
+@import "scss/base/buttons";
+@import "scss/base/customCheckmark";
+@import "scss/base/inputs";
+@import "scss/base/list";
+@import "scss/base/animations";
+
+// Components
+// Bar components (Sidebar, titlebar, titlebarDropdown)
 @import "scss/components/bars/titleBar";
 @import "scss/components/bars/titleBarDropdown";
 @import "scss/components/bars/sideNav";
-@import "scss/components/dropdown";
-@import "scss/components/clock";
-@import "scss/components/photo";
-@import "scss/components/weather";
-@import "scss/components/widgets";
-@import "scss/components/login";
-@import "scss/components/customCheckmark";
-@import "scss/components/adminProfile";
-@import "scss/components/dashboardEdit";
-@import "scss/components/inputs";
-@import "scss/components/list";
+// Griditem components
+@import "scss/components/gridItems/clock";
+@import "scss/components/gridItems/photo";
+@import "scss/components/gridItems/weather";
+@import "scss/components/gridItems/widgets";
+
+// User components
+@import "scss/components/user/login";
+@import "scss/components/user/adminProfile";
+@import "scss/components/user/dashboardEdit";
+
+// Popup
 @import "scss/components/card";
