--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -12,6 +12,30 @@ h6 {
   font-weight: bold;
 }
 
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2.25em;
+}
+
+h3 {
+  font-size: 1.75em;
+}
+
+h4 {
+  font-size: 1.125em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+h6 {
+  font-size: 0.75em;
+}
+
 p,
 span,
 a,
