--- a/client/src/scss/components/_dashboardEdit.scss
+++ b/client/src/scss/components/_dashboardEdit.scss
@@ -14,7 +14,7 @@
       background-color: none;
       margin: 30px 0;
       padding-right: 15px;
-      height: 780px;
+      height: calc(100vh - 250px);
 
       .dropdown {
         width: auto;
